Fixed bug #60106 (stream_socket_server silently truncates long unix socket paths)